fix default fonts/spacing removed with purgecss

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1,3 +1,8 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+
+html, body {
+  @apply m-0 p-0;
+}
+
+@tailwind components;
+@tailwind utilities;
